[package]
name = "fast-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
# accurate = "0.4.1"
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
tokio = { version = "1.37", features = ["full"] }
