[package]
name = "fast-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
# reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
